fix: use proxy_pass instead

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,6 @@ server {
 
   # make /another route point to second.html
   location /another {
-    try_files $uri /second.html;
+    proxy_pass http://localhost/second.html;
   }
 }
