feat: add proxy server

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,21 @@
+# PROXY SERVER
 server {
   listen 80;
-  server_name web;
+  server_name proxy_server;
+
+  # proxy all request to port 8080
+  location / {
+    proxy_pass http://localhost:8080/;
+  }
+}
+
+# FRONTEND SERVER
+server {
+  listen 8080;
+  server_name frontend;
   root /usr/share/nginx/html;
 
-  location / {
-  }
-
-  # make /another route point to second.html
-  location /another {
-    proxy_pass http://localhost/second.html;
+  location = /second {
+    try_files $uri $uri.html;
   }
 }
